8299179: ArrayFill with store on backedge needs to reduce length by 1

Backport-of: d716ec5d3034240b7dd0aed86d9bb371bc3e5f5a